使用CDN方式引入外部资源、接口超时配置:5秒

--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html lang="">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Grapefruit_8082</title>
+      <meta charset="utf-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
+      <meta name="viewport" content="width=device-width,initial-scale=1.0">
+      <title>Grapefruit_Java</title>
+
+      <!-- 需要使用vue.global的js版本,不然会抱错 Uncaught TypeError: Cannot read properties of undefined (reading 'createElementVNode') -->
+      <script src="https://cdn.bootcdn.net/ajax/libs/vue/3.2.45/vue.global.min.js"></script>
+      <link href="https://cdn.bootcdn.net/ajax/libs/element-plus/2.2.26/index.css" rel="stylesheet">
+      <script src="https://cdn.bootcdn.net/ajax/libs/element-plus/2.2.25/index.full.min.js"></script>
   </head>
   <body>
     <noscript>
