使用CDN方式引入highlight.js

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,11 @@
       <script src="https://cdn.bootcdn.net/ajax/libs/vue/3.2.45/vue.global.min.js"></script>
       <link href="https://cdn.bootcdn.net/ajax/libs/element-plus/2.2.26/index.css" rel="stylesheet">
       <script src="https://cdn.bootcdn.net/ajax/libs/element-plus/2.2.25/index.full.min.js"></script>
+
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.0/styles/default.min.css">
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.0/highlight.min.js"></script>
+      <!-- and it's easy to individually load additional languages -->
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.5.0/languages/go.min.js"></script>
   </head>
   <body>
     <noscript>
